--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     
     <groupId>com.yulikexuan.cloudlab</groupId>
-    <artifactId>in28minutes</artifactId>
+    <artifactId>cloudlab2019</artifactId>
     <version>2019.2</version>
     <packaging>pom</packaging>
     
