--- a/confsvr/pom.xml
+++ b/confsvr/pom.xml
@@ -8,7 +8,7 @@
     
     <parent>
         <groupId>com.yulikexuan.cloudlab</groupId>
-        <artifactId>in28minutes</artifactId>
+        <artifactId>cloudlab2019</artifactId>
         <version>2019.2</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
