--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.0.M2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
     
     <groupId>com.yulikexuan.cloudlab</groupId>
@@ -18,7 +18,7 @@
     <version>2019.2</version>
     <packaging>pom</packaging>
     
-    <name>cloudlab</name>
+    <name>cloudlab2019</name>
  
     <description>
         Cloud Lab in 2019 driven by Spring Cloud
