--- a/confsvr/src/main/resources/application.yml
+++ b/confsvr/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     config:
       server:
         git:
-          uri: file:///home/yli/dev/projects/configrepo
+          uri: file://${user.home}/configrepo
