--- a/limits/pom.xml
+++ b/limits/pom.xml
@@ -20,12 +20,13 @@
 
     <dependencies>
 
-        <!-- For @ConfigurationProperties -->
+        <!-- For @ConfigurationProperties
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        -->
 
         <dependency>
             <groupId>com.h2database</groupId>
