Still keep config values in application.yml in case cannot find config server

--- a/limits/src/main/resources/application.yml
+++ b/limits/src/main/resources/application.yml
@@ -3,3 +3,7 @@ management:
     web:
       exposure:
         include: "*"
+# Keep configuration here in case can not find config srever
+limits:
+  minimum: 1
+  maximum: 1111
