Add a new service curexc

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 
             <dependency>
                 <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-jdk8</artifactId>
+                <artifactId>mapstruct</artifactId>
                 <version>${org.mapstruct.version}</version>
             </dependency>
             
@@ -279,6 +279,7 @@
     <modules>
         <module>confsvr</module>
         <module>limits</module>
+        <module>curexc</module>
     </modules>
 
 </project>
