--- a/limits/pom.xml
+++ b/limits/pom.xml
@@ -42,7 +42,7 @@
 
         <dependency>
             <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-jdk8</artifactId>
+            <artifactId>mapstruct</artifactId>
         </dependency>
 
         <dependency>
