--- a/curexc/src/main/resources/bootstrap.yml
+++ b/curexc/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
-# server:
-#   port: 8000 # 8001, 8002, 8003, ...
+server:
+  port: 8000 # 8001, 8002, 8003, ...
 spring:
   application:
     name: curexc
