--- a/limits/src/main/resources/bootstrap.yml
+++ b/limits/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
-# server:
-#   port: 8080 # 8081, 8082, 8083, ...
+server:
+  port: 8080 # 8081, 8082, 8083, ...
 spring:
   application:
     name: limits
