--- a/curconv/src/main/resources/bootstrap.yml
+++ b/curconv/src/main/resources/bootstrap.yml
@@ -8,3 +8,9 @@ spring:
       uri: http://localhost:8888
   profiles:
     active: dev
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    instance:
+      preferIpAddress: true
