--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.M2</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     
@@ -28,12 +28,13 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <jaxb.version>2.3.0</jaxb.version>
+        <jaxb.version>2.3.1</jaxb.version>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <argLine>--illegal-access=permit</argLine>
         <mockito.junit.jupiter.version>2.27.0</mockito.junit.jupiter.version>
-        <spring.boot.version>2.2.0.M2</spring.boot.version>
-        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+        <spring.boot.version>2.1.4.RELEASE</spring.boot.version>
+        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <junit-jupiter.version>5.4.2</junit-jupiter.version>
     </properties>
 
     <dependencyManagement>
@@ -70,7 +71,7 @@
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-core</artifactId>
-                <version>${jaxb.version}</version>
+                <version>2.3.0.1</version>
             </dependency>
 
             <dependency>
@@ -238,46 +239,10 @@
         </plugins>
         
     </build>
-    
-    <repositories>
 
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-
-    </repositories>
-
-    <pluginRepositories>
-
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </pluginRepository>
-
-    </pluginRepositories>
-    
     <modules>
         <module>confsvr</module>
+        <module>eurekasvr</module>
         <module>limits</module>
         <module>curexc</module>
         <module>curconv</module>
