--- a/curconv/src/main/resources/application.yml
+++ b/curconv/src/main/resources/application.yml
@@ -1,3 +1,6 @@
-curexc:
-  ribbon:
-    listOfServers: localhost:8000
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    instance:
+      preferIpAddress: true
