--- a/zuulsvr/src/main/resources/application.yml
+++ b/zuulsvr/src/main/resources/application.yml
@@ -4,3 +4,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     instance:
       preferIpAddress: true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 400000
+ribbon:
+  ConnectTimeout: 100000
+  ReadTimeout: 100000
