Add zuulsvr module to parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,7 @@
         <module>limits</module>
         <module>curexc</module>
         <module>curconv</module>
+        <module>zuulsvr</module>
     </modules>
 
 </project>
