--- a/limits/src/main/resources/application.yml
+++ b/limits/src/main/resources/application.yml
@@ -2,3 +2,11 @@
 limits:
   minimum: 1
   maximum: 1111
+okta:
+  oauth2:
+    issuer: https://dev-432786.okta.com/oauth2/default
+    tokenInfoUri: https://dev-432786.okta.com/oauth2/default/v1/token
+    clientId: 0oakgiempU21VuL4C356
+    clientSecret: d4BwGnIstcCbP6aSPcGAnTEluVUEWlXtIMlzfRzm
+    grantType: client_credentials
+    scope: customScope
